<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/registration"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="54dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/enter_the_username"
        android:id="@+id/etUsernameRegister"

        />
    <TextView
        android:id="@+id/tvUsernameExistsWrongError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/already_exists"
        android:textColor="@color/design_default_color_error"

        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"


        app:layout_constraintTop_toBottomOf="@id/etUsernameRegister" />

    <TextView
        android:id="@+id/tvPasswordWrongError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/should_have_one_character_special_and_number"
        android:textColor="@color/design_default_color_error"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPasswordRegister" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUsernameExistsWrongError"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/enter_the_password"
        android:id="@+id/etPasswordRegister"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/ic_visibility_off"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordWrongError"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/confirm_password"
        android:id="@+id/etConfirmPasswordRegister"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/ic_visibility_off"
        />
    <TextView
        android:id="@+id/tvConfirmPasswordWrongError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/should_be_the_same_as_password"
        android:textColor="@color/design_default_color_error"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etConfirmPasswordRegister" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvConfirmPasswordWrongError"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/submit"
        android:id="@+id/btnSubmit"


        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnSubmit"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/btnToLogin"
        android:text="@string/already_have_an_account_login"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btnToLogin"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/login_as_manager"
        android:id="@+id/btnToManager"


        />
</androidx.constraintlayout.widget.ConstraintLayout>