<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginModule">

    <TextView
        android:id="@+id/headingonlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/login_as_user"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headingonlogin"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/enter_the_username"
        android:id="@+id/etUsernameLogin"

        />
    <TextView
        android:id="@+id/tvUsernameNotFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/username_not_found"
        android:textColor="@color/design_default_color_error"

        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"


        app:layout_constraintTop_toBottomOf="@id/etUsernameLogin" />

    <TextView
        android:id="@+id/tvPasswordWrongErrorLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/wrong_password"
        android:textColor="@color/design_default_color_error"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPasswordLogin" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUsernameNotFound"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/enter_the_password"
        android:id="@+id/etPasswordLogin"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/ic_visibility_off"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordWrongErrorLogin"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/submit"
        android:id="@+id/btnLogin"


        />

</androidx.constraintlayout.widget.ConstraintLayout>